syntax = "proto3";

package movies.db.v1;

import "proto/movies/info.v1.proto";
import "proto/movies/filters.v1.proto";
import "proto/movies/listing.v1.proto";

message GetListingRequest {
	repeated movies.filters.v1.Filter filters = 1;
	repeated string sort = 2;
	optional string search = 3;
};

message GetListingResponse {
	repeated movies.listing.v1.MovieGroup groups = 1;
};

message GetFilterListingRequest {
	repeated movies.filters.v1.Filter filters = 1;
	repeated string sort = 2;
	optional string search = 3;
	string category = 4;
	string term = 5;
};

message GetFilterListingResponse {
	repeated movies.listing.v1.MovieReference items = 1;
};

message GetMovieInfoRequest {
	string key = 1;
};

message GetMovieInfoResponse {
	movies.info.v1.MovieInfo info = 1;
};

message GetVideoFileRequest {
	string key = 1;
};

message GetVideoFileResponse {
	optional string uri = 1;
};

message DatabaseContentsChangeEvent {};
