syntax = "proto3";

package movies.info.v1;

import "proto/movies/listing.v1.proto";

message MovieInfo {
	string id = 1;
	bool has_video = 2;
	TitleInfo title = 3;
	CrewInfo crew = 4;
	repeated PeopleMap people = 5;
	repeated Link links = 6;
	repeated string genres = 7;
	repeated string countries = 8;
	repeated string age_rating = 9;
	repeated string tags = 10;
	repeated movies.listing.v1.MovieReference episodes = 11;
	optional string tagline = 12;
	optional string summary = 13;
	ImageInfo image = 14;
	optional uint32 year = 15;
	optional uint32 runtime = 16;
	optional uint32 rating = 17;

	optional MovieLink prev = 18;
	optional MovieLink next = 19;
	optional string parent = 20;
};

message MovieLink {
	string title = 1;
	string id = 2;
};

message TitleInfo {
	optional string local = 1;
	optional string orig = 2;
};

message CrewInfo {
	repeated PersonInfo directors = 1;
	repeated PersonInfo writers = 2;
	repeated PersonInfo cast = 3;
};

message PersonInfo {
	string key = 1;
	optional string contribution = 2;
};

message PeopleMap {
	string key = 1;
	string name = 2;
};

message Link {
	string href = 1;
	optional string icon = 2;
	optional string label = 3;
	optional string alt = 4;
	optional string rel = 5;
};

message ImageInfo {
	optional string highlight = 1;
	PosterInfo poster = 2;
	repeated string gallery = 3;
};

message PosterInfo {
	optional string small = 1;
	optional string large = 2;
	optional string normal = 3;
};
