syntax = "proto3";

package movies.listing.v1;

message MovieReference {
	string id = 1;
	optional uint32 pos = 2;
	optional string title = 3;
	optional string cover = 4;
	optional bool has_video = 5;
	repeated string tags = 6;
	repeated string age_rating = 7;
	string sort_hint = 8;
};

message MovieGroup {
	string id = 1;
	optional string title = 2;
	repeated MovieReference items = 3;
	optional uint32 pos = 4;
}
